--- a/src/index.css
+++ b/src/index.css
@@ -7,7 +7,50 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
+.container {
+  width: 50%;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: #eee;
+  border-radius: 5px;
+  text-align: center;
+  font-family: sans-serif;
+  color: #666;
+}
+
+.header, li, form {
+  background-color: #ccc;
+  width: 90%;
+  margin: 30px auto;
+  padding: 15px 0;
+}
+
+ul {
+  list-style: none;
+}
+
+li {
+  padding: 10px 0;
+  margin: 5px 0 5px 10px;
+}
+
+li:hover {
+  color: #ff0;
+  cursor: pointer;
+  text-decoration: line-through;
+}
+
+input {
+  width: 90%;
+  margin: 5px 0;
+  padding: 10px;
+  color: #444;
+  border: 0;
+  border-radius: 5px;
+}
+
+input[type='submit'] {
+  cursor: pointer;
 }
